# typed_sqlx_client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: actix_multi_db.rs  multi_table_crud.rs  mysql_crud.rs  postgres_crud.rs  sqlite_crud.rs
src/: lib.rs  macros.rs  tables.rs  traits.rs
tests/: crud_ops_test.rs  select_only_query_test.rs  test_to_row.rs
typed_sqlx_client_macros/: Cargo.toml
typed_sqlx_client_macros/src/: lib.rs
