[package]
name = "typed_sqlx_client"
version = "0.2.0"
edition = "2024"
authors = ["Rollp0x <zkrollp@gmail.com>"]
description = "Type-safe, extensible Rust library for managing multiple SQL databases and tables with sqlx."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rollp0x/typed_sqlx_client"
homepage = "https://github.com/Rollp0x/typed_sqlx_client"
documentation = "https://docs.rs/typed_sqlx_client"
readme = "README.md"
keywords = ["sqlx", "database", "actix-web", "type-safe", "orm"]
categories = ["database", "web-programming", "asynchronous"]

[features]
full = []


[dependencies]
sqlx = { version = "0.8.0", default-features = false }
serde_json = {version = "1.0"}
typed_sqlx_client_macros = { path = "./typed_sqlx_client_macros" }

[dev-dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = {version = "0.8.0", features=["mysql","sqlite","postgres","uuid","macros","runtime-tokio"]}
ethereum-mysql = "3.0.0"
uuid = {version = "1.10.0", features = ["v4","serde"]}
serde = "1.0"